--- a/_drafts/2014-05-22-Task-List.markdown
+++ b/_drafts/2014-05-22-Task-List.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Task List In Markdown"
-date:   2014-05-21 
+date:   2014-05-22 
 categories: Markdown
 ---
 
@@ -10,17 +10,12 @@ From the GitHub Blog, creating a Task List using the markdown format:
 Example:
 
 
-{% highlight ruby %}
-- [ ] Travel To France
-  - [ ] Bring Passport
-  - [ ] Book Hotel
-  - [ ] Book Airfare
-  - [ ] Bring Travel Guide
-{% endhighlight %}
-
 
 - [ ] Travel To France
   - [ ] Bring Passport
   - [ ] Book Hotel
   - [ ] Book Airfare
   - [ ] Bring Travel Guide
+
+
+Actually moving this to drafts, still working out the kinks.
